# MotionSlider

./: .gitignore  CMakeLists.txt  ContextMenuManager.cpp  ContextMenuManager.h  Dokumentation_Thumbnail_Generierung.md  ExternalTools.cpp  ExternalTools.h  FileOperations.cpp  FileOperations.h  MainWindow.cpp  MainWindow.h  MainWindow_window_settings.cpp  MediaViewerPanel.cpp  MediaViewerPanel.cpp.bak  MediaViewerPanel.h  NameShortenDelegate.cpp  NameShortenDelegate.h  README_KI.md  ScrollConfig.cpp  ScrollConfig.h  ScrollNavigator.cpp  ScrollNavigator.h  SettingsManager.cpp  SettingsManager.h  ThumbnailDelegate.cpp  ThumbnailDelegate.h  ThumbnailGenerator.cpp  ThumbnailGenerator.h  VideoGraphicsView.cpp  VideoGraphicsView.h  about.cpp  build_and_report.ps1  log.txt  main.cpp  mcp_build_check.py  program-settings.json  window-settings.json
icons/: readme.txt
